[package]
name = "netcdf3"
version = "0.5.3"
authors = ["Julien Bt"]
edition = "2018"
description = "A pure Rust library for reading and writing NetCDF-3 files"
documentation = "https://docs.rs/netcdf3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/julienbt/netcdf3"
keywords = ["netcdf"]
readme = "README.md"

[badges]
travis-ci = { repository = "julienbt/netcdf3" }
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1.5.0"
nom = "8.0.0"

[dev-dependencies]
tempfile = "3.20.0"
copy_to_tmp_file = {path = "./data/copy_to_tmp_file"}
